# CYUSB3KIT-003_with_SP605_xilinx

./: .gitignore  Implementation_details.md  README.md  vivado_lab.jou  vivado_lab_7781.backup.jou  vivado_lab_8246.backup.jou  vivado_lab_pid8736.str
.Xil/vivado_lab-8736-barrachina-lpsc3229x/: Project1.lpr
WireShark_Saves/Linux/: complete_program.pcapng  fpga_programming.pcapng
WireShark_Saves/Windows/: fpga_firmware_only.pcapng  full_programming_process.pcapng
com_fpga/FPGA_firmware/: slaveFIFO2b_fpga_top.bit
com_fpga/fx3_firmware/: SF_loopback.img  SF_streamIN.img
courses/udacity_intro_to_tensorflow_for_deep_learning/: l06c02_exercise_flowers_with_transfer_learning.ipynb
doc/: UART.txt
docs/: API_Doc.md  bulk_mathods.rst  bulk_methods.rst  constructor.rst  get_print_info.rst  index.rst  installation.rst  others.rst  programming.rst
fpga_source_code/: AN65974.gise  AN65974.xise  Makefile  clk_wiz_v3_2_summary.html  clk_wiz_v3_6_2.vhd  slaveFIFO2b_fpga_top.ucf
fpga_source_code/_xmsgs/: pn_parser.xmsgs
fx3_manager_cpp_source/: CMakeCache.txt  Makefile  cmake_install.cmake  main.cpp  project.cbp  testing_cpp_code  testing_cpp_code.cbp
program_fpga/: Template.exe.lnk
testing_cpp_code/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  testing_cpp_code  testing_cpp_code.cbp
testing_cpp_code/fx3_images/: cyfxbulklpautoenum.img  cyfxbulksrcsink.img  cyfxisolpauto.img
testing_cpp_code/include/: MimacUSB3Connection.h  controlcenter.h  cyusb.h
testing_cpp_code/src/: MimacUSB3Connection.cpp  libcyusb.cpp  libcyusb.so.1
(+922 files in other folders)
